force-app/main/default/objects/VoiceCall/fields/Caller_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Caller_FirstName__c</fullName>
    <description>Caller first name, stamped from the linked Contact by the Skywave VoiceCall Set Caller Fields flow. Read by the voice agent as a linked variable.</description>
    <label>Caller First Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>