force-app/main/default/objects/VoiceCall/fields/Caller_LastName__c.field-meta.xml
<CustomField>
    <fullName>Caller_LastName__c</fullName>
    <description>Caller last name, stamped from the linked Contact by the Skywave VoiceCall Set Caller Fields flow.</description>
    <label>Caller Last Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>