force-app/main/default/objects/VoiceCall/fields/Caller_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Caller_Salutation__c</fullName>
    <description>Caller salutation (Mr / Ms), stamped from the linked Contact by the Skywave VoiceCall Set Caller Fields flow.</description>
    <label>Caller Salutation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>